--- a/templates/directives/fileitem.html
+++ b/templates/directives/fileitem.html
@@ -1,3 +1,8 @@
-<div class="el-fileitem"><div class="icon"><i class="{{file.type}}"></i></div>
-{{file.name}}
+<div class="el-fileitem">
+  <div class="file-type-wrap">
+    <i class="fa fa-{{file.type}} fa-fw"></i>
+  </div>
+  <div class="file-name">
+    {{file.name}}
+  </div>
 </div>
