--- a/templates/directives/droparea.html
+++ b/templates/directives/droparea.html
@@ -1,3 +1,10 @@
 <!-- droparea template -->
-<div id="el-droparea" ng-transclude>
+<div id="el-droparea">
+  <i class="fa fa-cloud-upload fa-fw"></i> drop your files here or  <label class="custom-file-upload">
+    <input type="file" multiple/>
+    <i class="fa fa-external-link-square fa-fw"></i> Browse your Computer
+  </label>
+  <div class="result" ng-show="hasResults()">
+    <dropfile ng-repeat="file in upload" file-data="file"></dropfile>
+  </div>
 </div>
