--- a/templates/directives/filesystem.html
+++ b/templates/directives/filesystem.html
@@ -1,5 +1,6 @@
 <div id="el-filesystem">
 
+<folders folders-data = "folders"></folders>
 <fileitem ng-repeat="file in folder" file-data="file"></fileitem>
 
 </div>
