--- a/templates/directives/filesystem.html
+++ b/templates/directives/filesystem.html
@@ -1,6 +1,6 @@
 <div id="el-filesystem">
 
-<folders folders-data = "folders"></folders>
-<fileitem ng-repeat="file in folder" file-data="file"></fileitem>
+<folder ng-repeat="folder in folders" folder-data = "folder" folders-data = "folders"></folder>
+<fileitem ng-repeat="file in files" file-data="file"></fileitem>
 
 </div>
