--- a/templates/directives/filesystem.html
+++ b/templates/directives/filesystem.html
@@ -1,5 +1,12 @@
 <div id="el-filesystem">
-
+<div class="new-folder-wrap">
+  <form>
+  <i class="fa fa-folder-o fa-fw"></i>
+  <input class="new-folder-input" type="text" ng-model="new_folder_name" placeholder="New Folder Name"><button ng-click="create_new_folder()">
+  <i class="fa fa-plus fa-fw"></i>
+  </button>
+  </form>
+</div>
 <folder ng-repeat="folder in folders" folder-data = "folder" folders-data = "folders"></folder>
 <fileitem ng-repeat="file in files" file-data="file"></fileitem>
 
