--- a/templates/directives/folder.html
+++ b/templates/directives/folder.html
@@ -1,11 +1,12 @@
 <div class="el-fileitem">
   <div class="file-type-wrap">
-    <i class="fa fa-folder fa-fw"></i>
+    <i class="fa fa-folder fa-fw" ng-click="toogleIt()"></i>
   </div>
-  <div class="file-name">
+  <div class="file-name" >
     {{folder.name}}
   </div>
   <div class="file-remove-wrap">
     <i class="fa fa-close fa-fw" ng-click="remove()"></i>
   </div>
+
 </div>
